Update of MarioWebsite

--- a/src/signalboost/signalboost.yaml
+++ b/src/signalboost/signalboost.yaml
@@ -1,12 +1,8 @@
 people:
-  - name: "John Doe"
+  - name: "Mario Georgiev"
     hidden: "true"
     tech: "Never gonna give you up"
-    blog: "https://henryneeds.coffee/blog"
-    devto: "https://dev.to/username"
-    dribbble: "https://dribbble.com/username"
-    github: "https://github.com/username"
-    gitlab: "https://gitlab.com/username"
-    linkedin: "https://linkedin.com/in/username"
-    twitter: "https://twitter.com/username"
-    website: "https://henryneeds.coffee"
+    github: "https://github.com/mrmariox"
+    linkedin: "https://linkedin.com/in/mariogeorgiev"
+    twitter: "https://twitter.com/usernamemrmariox_"
+    website: "https://mariogeorgiev.com"
