--- a/src/resume/resume.yaml
+++ b/src/resume/resume.yaml
@@ -1,38 +1,66 @@
 jobs:
-  - employer: "Acuity Brands Lighting"
-    position: "Senior Application Developer (Full Time)"
-    time: "September 2021 - Present"
+  - employer: "Secure Group Lab"
+    position: "Technical Support Manager (FULL TIME)"
+    time: "May 2023 - Present"
     details: |
-      - Building out a proof-of-concept using Temporal to evaluate its use as our future workflow engine. [Kubernetes, Temporal]
-      - Evaluating various CI & CD platforms for use in a new internal platform.
-      - Working with several teams to open up more intra-team sharing and communications within our chat platform. [MS Teams]
-      - Selected a C4 modeling framework for the company and created training materials: "Getting Started" documentation and an eLearning video series. [PlantUML, Azure DevOps]
-      - Contributed to the founding documents of Acuity's future Hackathon Series. Beginning to plan our first event.
-  - employer: "Clarity Software Solutions"
+      - Identify and resolve technical issues for customers
+      - Manage a team of technical support representatives
+      - Develop and maintain technical documentation and knowledge base
+      - Analyze and report on technical support metrics
+      - Collaborate with cross-functional teams to improve product functionality and customer experience
+      - Train and onboard new technical support representatives
+      - Provide exceptional customer service and support
+      - Stay up-to-date on industry trends and best practices
+      - Implement and manage a ticketing system for technical support requests
+      - Lead and participate in technical support projects and initiatives
+    resource_url_1: "https://securegroup.com"
+    resource_title_1: "Secure Group Website"
+  - employer: "Secure Group Lab"
     position: "DevOps Engineer (Full Time)"
-    time: "May 2019 - August 2021"
+    time: "May 2021 - May 2023"
     details: |
-      - Built out a modular and extendable pipeline to extract and format data from Datadog to aid our business intelligence team in developing automatic reports for national clients. [NodeJS, Docker, Kubernetes, Datadog, MariaDB]
-      - Helped manage the container-based infrastructure, including acting as the point person when mitigating customer issues tracing back to code hosted on our Kubernetes cluster, shadowed our K8s leads when they worked on our cluster, aided in spinning down an old K8s cluster as we migrated to AWS, and helped developers containerize built processes.
-      - Started to build out a language agnostic toolchain with AWS Lambda that would allow developers to pick and choose pieces to create their own pipelines.
-      - Automated, with input from our ops and compliance teams, the process for scrubbing PHI from our lower environments, resulting in a time savings (so far) of ~95% or ~7.5 man-hours. [Bash, MariaDB]
-      - Completed code, shell script, and SQL migrations to our lower environments as needed throughout the day & verified the same in daily change control meetings.
-      - Automated the process of preparing code packages for our daily builds, resulting in a time savings of ~85% or ~2.5 man-hours. [Bash, Docker, GitHub]
-      - Built a tool to parse and verify SQL scripts at various points in our change control process. [NodeJS, Docker, Kubernetes, GitHub]
-      - Participated in discussions with senior engineers to both plan a digital transformation and discuss company-wide development standards that promote automation.
-  - employer: "NewHaven.IO (Non-Profit)"
-    position: "President, Member Board of Directors (Volunteer)"
-    time: "November 2018 - Present"
+      - Provide advanced technical troubleshooting and problem-solving solutions regarding situations related to custom built virtual instances (Eco-systems)
+      - Collaborate on cross-team and cross-product technical issues by working with colleagues from other teams as needed to resolve and optimize processes regarding the instances built
+      - Work with Research & Development as well as Engineering to update and improve on the current technology
+
+
+      Competencies:
+      - Docker Engine and Containerization 
+      - MS Exchange and AD management
+      - Cent OS and Windows Servers Management 
+      - Secure-server architecture
+      - Virtual Machine management using Microsoft Hyper-V / ProxMox / Azure / VirtualBox / Vultr
+      - OpenSTF Management and Setup on Docker
+      - Additional Experience configuring and managing Openfire/NGINX/rtpengine
+      - MDM Management with Hexnode and HeadWind
+      - Daily use of Atlassian SaaS applications
+      - Monitoring stack with Zabbix/Grafana
+    resource_url_1: "https://securegroup.com"
+    resource_title_1: "Secure Group Website"
+  - employer: "Tek Experts Bulgaria"
+    position: "Software Engineer - Microsoft Dynamics CRM"
+    time: "June 2020 - May 2021"
     details: |
-      - Organizing events around the city for our members to network and learn new technology skills.
-      - Partnering with other technology and non-profit focused organizations to help connect and align groups and individuals.
-      - Creating a stronger tech and startup minded community by fostering a culture of creation and experimentation.
-      - Managing a team of developers to create and launch a new website for the group.
-    resource_url_1: "https://newhaven.io"
-    resource_title_1: "NewHaven.IO Website"
-  - employer: "Administrative Office (AO) of the United States Courts"
-    position: "Software Developer - Temporary Duty Assignment (Shared Time)"
-    time: "August 2018 - April 2019"
+        - Deliver advanced technical troubleshooting and problem-solving solutions for corporate customers
+        - Collaborate on cross-team and cross-product technical issues by working with colleagues from other teams as needed to resolve customer problems
+        - Work with subject matter experts and escalation managers when additional support is needed for the client
+        - Setting customer expectations, devise and implement action plans and professionally communicate to all parties involved.
+
+        Competencies:
+        - Azure, Hybrid and on premise Synchronisation
+        - Microsoft Dynamics 365 Online and on Premise
+        - Cloud Azure AD & Office 365 configurations
+        - Microsoft Exchange Online and OnPremise, Email Router
+        - Client-server architecture
+        - Networking concept (DNS, DHCP, subnet)
+        - Backup and restore / Sandbox and Production
+        - Microsoft Windows Server and Active Directory
+        - Virtual Machine management using Microsoft Hyper-V
+        - PowerPlatform, PowerApps, Flow
+        - PowerShell, SQL, Visual Basic, Javascript
+  - employer: "Britanica"
+    position: "Yearly English Teacher"
+    time: "June 2019 - June 2020"
     details: |
       - Transitioned the Judicial Dashboard to work on an on-premise OpenShift/GlusterFS solution, cutting the deployment time down by 99.17%. This involved converting a single server buildout to a Docker solution to allow multiple developers to work concurrently on their local machines followed by another conversion to Kubernetes to facilitate an efficient rollout to 34 courts in the next six months.
       - Created, maintained, and provided enhancements to the codebase for a web application that automates the daily "getting up to speed" work for District Judges across the country, saving roughly an hour’s worth of time per judge every morning.
@@ -40,149 +68,12 @@ jobs:
       - Communicated with the national IT Security Office to scan images and engineer solutions to remediate findings. Held partially in the Hartford courtrooms.
       - Interfaced with District Judges and users in the pilot courts testing the Judicial Dashboard to better understand user needs.
       - Coordinated with cross-functional stakeholders in the AO to align all teams in a common strategic direction.
-  - employer: "United States District Court, District of Connecticut"
-    position: "Programmer (Full Time)"
-    time: "March 2017 - April 2019"
+  - employer: "Sutherland GLobal Services Bulgaria"
+    position: "Business Applications Analyst"
+    time: "May 2014 - July 2017"
     details: |
-      - Transitioned in-house legacy applications to container based architectures with Docker for easier development and deployment. The ability to develop more quickly lead to a partnership with the Case Management Solutions Office in D.C., the hiring of part time developers, and a speedier rollout of the Judicial Dashboard product.
-      - Experimented with modern web technologies like Vue.js, Node, and Webpack to lay the groundwork of modernizing the tech stack of the Judicial Dashboard project in order to better source talent for a nationwide rollout.
-      - Communicated with developers across the judiciary about emerging technologies that could overhaul the core applications used by districts across the country. That combined advocacy led to a container focused overhaul of the organization's core product offerings and a judiciary-wide OpenShift hosting environment that the District of Connecticut is currently piloting.
-      - Implemented an iPad fleet and MachForm solution to shorten the process of gathering information from potential jurors, normalizing the data, and getting it into the hands of attorneys in high profile cases, by 92.5%.
-      - Developed a touchscreen jury sign in kiosk to undercut the cost of Xerox’s proposed product, to be used in courthouses nationwide, by ~85%.
-      - Coordinated with the district's Security Officer to keep various web servers patched and secure.
-  - employer: "LearnToProgram.TV"
-    position: "Developer in Residence / Instructor (Part Time)"
-    time: "June 2017 - August 2018"
-    details: |
-      - Kept up with the bleeding edge of the web technology horizon to help set technical direction for LTP's courses and library.
-      - Developed an eLearning course titled "Intro to Server Administration" that was distributed across multiple channels (including Udemy, Packt, and Safari).
-      - Wrote an article/workshop for the LearnToProgram.TV Magazine titled "The Future Is Docker".
-      - Instructed and mentored students in the Framework Web Development Bootcamp, both in-person and online.
-    resource_url_1: "https://www.magloft.com/app/learntoprogram/#/reader/12706/364883"
-    resource_title_1: "Magazine Article"
-    resource_url_2: "https://www.udemy.com/course/introduction-to-server-administration/"
-    resource_title_2: "Udemy Course"
-  - employer: "United States District Court, District of Connecticut"
-    position: "Programmer / Analyst (Full Time)"
-    time: "May 2015 - March 2017"
-    details: |
-      - Created full stack LAMP and Ruby on Rails web applications to automate workflows for HR and Operations. Communications involved in on and off boarding employees was cut by over 40% due to streamlining the process by which system access privileges are requisitioned and assigned.
-      - Managed Red Hat servers running IBM Informix and US District Court CM/ECF (our docketing application) instances and prepared for our district's early adopter NextGen CM/ECF upgrade.
-      - Crafted complex, multi table queries to generate reports that allowed Magistrate and District Judges on the CM/ECF Committee to decide which nature of suit case types needed to be optimized to abide by the Speedy Trial Clause.
-projects:
-  - name: "Henry Gives Coffee"
-    year: "2021"
-    description: "A web project meant to reward and support creativity on the web. Every month, people can submit their side projects that fit a theme, and cash prizes are awarded to developers chosen by myself and a handful of Patreon supporters. Most everyone at least gets a shoutout for their work."
-    technologies: "GatsbyJS, NodeJS, GraphQL, Netlify."
-    github: "https://github.com/Quinncuatro/HenryGivesCoffee"
-    dockerhub: "null"
-  - name: "New Haven Relief Resources"
-    year: "2020"
-    description: "Built a web app to crowdsource and relay information regarding available aid in New Haven during the COVID-19 pandemic (including food banks, health/family resources, and business help). Includes a sister repository to help others set up a no-code version for their own city using only free resources."
-    technologies: "JavaScript, React, GatsbyJS, AirTable, Netlify."
-    github: "https://github.com/Quinncuatro/service-relief-new-haven/blob/master/package.json"
-    dockerhub: "null"
-  - name: "DEVC Webpack Playground"
-    year: "2018"
-    description: "Experimenting folding Vue.js, Node, and WebPack into a containerized Lucee (open source ColdFusion) and MySQL environment that’s used in the judiciary. The end goal is to spur a modernization effort of our tech stacks across the country."
-    technologies: "Vue.js, ColdFusion, Shell, JavaScript, Docker, Node, Webpack, MySQL."
-    github: "https://github.com/Quinncuatro/DEVC_Webpack_Playground"
-    dockerhub: "null"
-  - name: "SLAter "
-    year: "2018"
-    description: "Programmed a Raspberry Pi to monitor my DeskPro queue and alert me via external speakers when I have a new ticket assigned to me. This workflow was also used to remind a coworker to drink water and cure his gout."
-    technologies: "JavaScript, Node, MySQL, Raspberry Pi."
-    github: "https://github.com/Quinncuatro/SLAter"
-    dockerhub: "null"
-  - name: "US Webtranet"
-    year: "2017"
-    description: "Built a containerized intranet framework for federal agencies. It was presented and used as a Docker technical demo in a nationwide video conference call to other judiciary developers in January of 2017."
-    technologies: "Ruby, Rails, SQLite, Draft U.S. Web Design Standards, Docker."
-    github: "https://github.com/Quinncuatro/us_webtranet"
-    dockerhub: "https://hub.docker.com/r/quinncuatro/us_webtranet/"
-  - name: "Digital Signage"
-    year: "2017"
-    description: "Developed a responsive digital signage system to let competitors in the 2017 National High School Mock Trials Championship know their various courtroom assignments across the Hartford courthouse when new rounds were posted."
-    technologies: "JavaScript, Meteor, MongoDB."
-    github: "https://github.com/Quinncuatro/signage"
-    dockerhub: "null"
-presentations:
-  - talk: "Leading a Digital Transformation at the Speed of Government - Half Hour"
-    conference: "All Day DevOps 2020"
-    location: "Virtual"
-    date: "November 2020"
-    video: "https://youtu.be/gQTuDp_sOZg?t=1984"
-    website: "https://www.alldaydevops.com/"
-    slides: "https://noti.st/quinncuatro/wJqZX6/leading-a-digital-transformation-at-the-speed-of-government"
-    article: "https://www.alldaydevops.com/blog/leading-a-digital-transformation-at-the-speed-of-government"
-  - talk: "Leading a Digital Transformation at the Speed of Government - Lightning"
-    conference: "All Things Open 2020"
-    location: "REMOTE - Raleigh, NC"
-    date: "October 2020"
-    video: "https://www.youtube.com/watch?v=MaJDxcyqGe8"
-    website: "https://2020.allthingsopen.org/"
-  - talk: "Leading a Digital Transformation at the Speed of Government - Lightning"
-    conference: "DevOpsDays Chicago 2020"
-    location: "REMOTE - Chicago, IL"
-    date: "September 2020"
-    video: "https://www.youtube.com/watch?v=sY5AUJAS1kA"
-    website: "https://devopsdays.org/events/2020-chicago/welcome/"
-    slides: "https://noti.st/quinncuatro/yWnk8K/leading-a-digital-transformation-at-the-speed-of-government"
-  - talk: "Leading a Digital Transformation at the Speed of Government - Lightning"
-    conference: "DevOpsDays Hartford 2019"
-    location: "Hartford, CT"
-    date: "October 2019"
-    video: "https://youtu.be/FbEm8wF9CKM?t=308"
-    website: "https://devopsdays.org/events/2019-hartford/welcome/"
-    slides: "https://noti.st/quinncuatro/cALeaG/leading-a-digital-transformation-at-the-speed-of-government"
-  - talk: "Leading a Digital Transformation at the Speed of Government - Half Hour"
-    conference: "Google Developers Group DevFest 2019"
-    location: "New Haven, CT"
-    date: "September 2019"
-    website: "https://devfest-new-haven.firebaseapp.com/#/"
-  - talk: "Intro to Docker"
-    conference: "NewHaven.IO Meetup - Container/Kubernetes Talks"
-    location: "New Haven, CT"
-    date: "March 2019"
-    website: "https://www.meetup.com/newhavenio/events/259374344/"
-    slides: "https://noti.st/quinncuatro/EU4SSf/intro-to-docker"
-  - talk: "Judicial Dashboard - Dashboard View of Court Operations"
-    conference: "U.S. District Courts, IT Conference West"
-    location: "Phoenix, AZ"
-    date: "August 2018"
-  - talk: "Judicial Dashboard - Dashboard View of Court Operations"
-    conference: "U.S. District Courts, District Operational Practices Forum"
-    location: "Minneapolis, MN"
-    date: "May 2018"
-  - talk: "Intro to Relational Databases"
-    conference: "LearnToProgram.TV Meetup"
-    location: "New Haven, CT"
-    date: "March 2018"
-  - talk: "Intro to DevOps Workshop"
-    conference: "Google Developers Group DevFest 2017"
-    location: "New Haven, CT"
-    date: "November 2017"
-  - talk: "US Webtranet"
-    conference: "U.S. District Courts, Collaborative Applications Development (CAD) Developer’s Forum"
-    location: "Webex"
-    date: "January 2017"
-  - talk: "Human Resources Organizer (HRO)"
-    conference: "U.S. District Courts, District Operational Practices Forum"
-    location: "Orlando, FL"
-    date: "September 2016"
-podcasts:
-  - title: "Episode 148: Innovating a Web3 Future in Connecticut with CT3 DAO "
-    show: "CT Startup Podcast"
-    date: "January 2022"
-    description: "Web3 is the hot new term floating around the web describing a more decentralized internet future where big companies hold less sway. Eric speaks with Henry Quinn and Jake Burden of CT3 DAO and how they are hoping to bring some of that vision and tech to Connecticut."
-    link: "https://ctstartup.com/2022/01/19/episode-148-innovating-a-web3-future-in-connecticut-with-ct3-dao/"
-  - title: "Episode 22: NewHaven.IO"
-    show: "Between Two Rocks"
-    date: "August 2019"
-    description: "Steve and Henry from NewHaven.IO join us to talk about the New Haven tech community, how to get into the tech scene, and what our most hated programming languages are."
-    link: "https://betweentworocks.com/episode-22-newhaven-io/"
-  - title: "Episode 101: The Water Cooler of New Haven Tech"
-    show: "CT Startup Podcast"
-    date: "February 2019"
-    description: "Introducing NewHaven.IO — The water cooler of the New Haven tech scene. The creators’ ultimate goal is to bring a human element to the New Haven tech scene by creating a unified community for the people working within it. They explain to us how the current local tech scene features an expansive catalog of different types of tech and how they are working to bring this wide variety of people together."
-    link: "https://ctstartup.com/2019/02/26/episode-101-the-water-cooler-of-new-haven-tech/"
+      - Receiving and resolving complex issues and meeting customer needs 
+      - Working with other people to solve problems and enhance future products 
+      - Using debugging tools and lab simulations to analyze problems and identify solutions 
+      - Keeping up-to-date with new technology products in order to provide support as soon as they are launched in the market 
+      - Pre-selling and up-selling, customer consultation on client products
